--- a/testing/TestHarness/TestHarness.Shared/Ext/Navigation/Reactive/ReactiveFourPage.xaml
+++ b/testing/TestHarness/TestHarness.Shared/Ext/Navigation/Reactive/ReactiveFourPage.xaml
@@ -1,38 +1,46 @@
 ﻿<Page
-    x:Class="TestHarness.Ext.Navigation.Reactive.ReactiveFourPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:TestHarness.Ext.Navigation.Reactive"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	  mc:Ignorable="d"
-	  xmlns:uen="using:Uno.Extensions.Navigation.UI"
-	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+	x:Class="TestHarness.Ext.Navigation.Reactive.ReactiveFourPage"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:local="using:TestHarness.Ext.Navigation.Reactive"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:uen="using:Uno.Extensions.Navigation.UI"
+	Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+	mc:Ignorable="d">
 
 	<Grid>
-		<StackPanel HorizontalAlignment="Center"
-					VerticalAlignment="Center">
-			<Button AutomationProperties.AutomationId="FourPageToFivePageButton"
-					Content="Five"
-					uen:Navigation.Request="Five" />
-			<Button AutomationProperties.AutomationId="FourPageBackButton"
-					Content="Back"
-					uen:Navigation.Request="-" />
-			<Button AutomationProperties.AutomationId="FourPageToFivePageCodebehindButton"
-					Content="Five (Codebehind)"
-					Click="FourPageToFivePageCodebehindClick"/>
-			<Button AutomationProperties.AutomationId="FourPageBackCodebehindButton"
-					Content="Back (Codebehind)"
-					Click="FourPageBackCodebehindClick"/>
-			<Button AutomationProperties.AutomationId="FourPageToFivePageViewModelButton"
-					Content="Five (ViewModel)"
-					Command="{Binding GoToFive}" />
-			<Button AutomationProperties.AutomationId="FourPageBackViewModelButton"
-					Content="Back (ViewModel)"
-					Command="{Binding GoBack}" />
-			<Button AutomationProperties.AutomationId="FourPageToFivePageDataButton"
-					Content="Five (Data)"
-					Command="{Binding GoToFiveData}" />
+		<StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+			<TextBlock AutomationProperties.AutomationId="FourPageWidgetNameTextBlock" Text="{Binding DataModel.Widget.Name}" />
+
+			<Button
+				uen:Navigation.Request="Five"
+				AutomationProperties.AutomationId="FourPageToFivePageButton"
+				Content="Five" />
+			<Button
+				uen:Navigation.Request="-"
+				AutomationProperties.AutomationId="FourPageBackButton"
+				Content="Back" />
+			<Button
+				AutomationProperties.AutomationId="FourPageToFivePageCodebehindButton"
+				Click="FourPageToFivePageCodebehindClick"
+				Content="Five (Codebehind)" />
+			<Button
+				AutomationProperties.AutomationId="FourPageBackCodebehindButton"
+				Click="FourPageBackCodebehindClick"
+				Content="Back (Codebehind)" />
+			<Button
+				AutomationProperties.AutomationId="FourPageToFivePageViewModelButton"
+				Command="{Binding GoToFive}"
+				Content="Five (ViewModel)" />
+			<Button
+				AutomationProperties.AutomationId="FourPageBackViewModelButton"
+				Command="{Binding GoBack}"
+				Content="Back (ViewModel)" />
+			<Button
+				AutomationProperties.AutomationId="FourPageToFivePageDataButton"
+				Command="{Binding GoToFiveData}"
+				Content="Five (Data)" />
 
 		</StackPanel>
 	</Grid>
