--- a/testing/TestHarness/TestHarness.Shared/Ext/Navigation/Reactive/ReactiveThreePage.xaml
+++ b/testing/TestHarness/TestHarness.Shared/Ext/Navigation/Reactive/ReactiveThreePage.xaml
@@ -1,38 +1,46 @@
 ﻿<Page
-    x:Class="TestHarness.Ext.Navigation.Reactive.ReactiveThreePage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:TestHarness.Ext.Navigation.Reactive"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	  mc:Ignorable="d"
-	  xmlns:uen="using:Uno.Extensions.Navigation.UI"
-	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+	x:Class="TestHarness.Ext.Navigation.Reactive.ReactiveThreePage"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:local="using:TestHarness.Ext.Navigation.Reactive"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:uen="using:Uno.Extensions.Navigation.UI"
+	Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+	mc:Ignorable="d">
 
 	<Grid>
-		<StackPanel HorizontalAlignment="Center"
-					VerticalAlignment="Center">
-			<Button AutomationProperties.AutomationId="ThreePageToFourPageButton"
-					Content="Four"
-					uen:Navigation.Request="Four" />
-			<Button AutomationProperties.AutomationId="ThreePageBackButton"
-					Content="Back"
-					uen:Navigation.Request="-" />
-			<Button AutomationProperties.AutomationId="ThreePageToFourPageCodebehindButton"
-					Content="Four (Codebehind)"
-					Click="ThreePageToFourPageCodebehindClick" />
-			<Button AutomationProperties.AutomationId="ThreePageBackCodebehindButton"
-					Content="Back (Codebehind)"
-					Click="ThreePageBackCodebehindClick" />
-			<Button AutomationProperties.AutomationId="ThreePageToFourPageViewModelButton"
-					Content="Four (ViewModel)"
-					Command="{Binding GoToFour}" />
-			<Button AutomationProperties.AutomationId="ThreePageBackViewModelButton"
-					Content="Back (ViewModel)"
-					Command="{Binding GoBack}" />
-			<Button AutomationProperties.AutomationId="ThreePageToFourPageDataButton"
-					Content="Four (Data)"
-					Command="{Binding GoToFourData}" />
+		<StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+			<TextBlock AutomationProperties.AutomationId="ThreePageWidgetNameTextBlock" Text="{Binding DataModel.Widget.Name}" />
+
+			<Button
+				uen:Navigation.Request="Four"
+				AutomationProperties.AutomationId="ThreePageToFourPageButton"
+				Content="Four" />
+			<Button
+				uen:Navigation.Request="-"
+				AutomationProperties.AutomationId="ThreePageBackButton"
+				Content="Back" />
+			<Button
+				AutomationProperties.AutomationId="ThreePageToFourPageCodebehindButton"
+				Click="ThreePageToFourPageCodebehindClick"
+				Content="Four (Codebehind)" />
+			<Button
+				AutomationProperties.AutomationId="ThreePageBackCodebehindButton"
+				Click="ThreePageBackCodebehindClick"
+				Content="Back (Codebehind)" />
+			<Button
+				AutomationProperties.AutomationId="ThreePageToFourPageViewModelButton"
+				Command="{Binding GoToFour}"
+				Content="Four (ViewModel)" />
+			<Button
+				AutomationProperties.AutomationId="ThreePageBackViewModelButton"
+				Command="{Binding GoBack}"
+				Content="Back (ViewModel)" />
+			<Button
+				AutomationProperties.AutomationId="ThreePageToFourPageDataButton"
+				Command="{Binding GoToFourData}"
+				Content="Four (Data)" />
 
 		</StackPanel>
 	</Grid>
