--- a/testing/TestHarness/TestHarness.Shared/Ext/Authentication/Oidc/OidcAuthenticationLoginPage.xaml
+++ b/testing/TestHarness/TestHarness.Shared/Ext/Authentication/Oidc/OidcAuthenticationLoginPage.xaml
@@ -22,6 +22,10 @@
 		<StackPanel Grid.Row="1"
 					HorizontalAlignment="Center"
 					VerticalAlignment="Center">
+			<TextBlock>
+				<Run Text="Providers: "/>
+				<Run Text="{Binding ProviderCount}" AutomationProperties.AutomationId="LoginProviderCountText" />
+			</TextBlock>
 			<Button Content="Login"
 					Click="{x:Bind ViewModel.Login}" />
 		</StackPanel>
